<resources>
    <string name="app_name">Save Food</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error">Error</string>
    <string name="default_text">-</string>
    <string name="loading">Loading...</string>
    <string name="hallo">Hallo</string>
    <string name="ardiansyah">Ardiansyah</string>
    <string name="message">Pesan</string>
    <string name="title_activity_location">LocationActivity</string>
    <string name="choose_location">Pilih Lokasi</string>
    <string name="current_location">Lokasi saat ini</string>
    <string name="not_granted">Tidak Diberikan</string>
    <string name="register">Daftar</string>
    <string name="hello_there_join_us_to_get_started">Halo, bergabunglah dengan kami untuk memulai!</string>
    <string name="full_name">Nama lengkap</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Ingat saya</string>
    <string name="forgot_password">Lupa Password?</string>
    <string name="or_continue_with">atau lanjutkan dengan</string>
    <string name="don_t_have_an_account">Tidak memiliki akun?</string>
    <string name="login">Masuk</string>
    <string name="hello_there_sign_to_continue">Halo, masuk untuk melanjutkan!</string>
    <string name="next">Selanjutnya</string>
    <string name="phone_number">Nomor Telepon</string>
    <string name="role">Peran</string>
    <string name="customer">Pelanggan</string>
    <string name="food_and_beverage_business">Bisnis Makanan dan Minuman</string>
    <string name="non_govermental_organization_ngo">Lembaga Swadaya Masyarakat (LSM)</string>
    <string name="confirm_password">Konfirmasi Kata Sandi</string>
    <string name="already_have_an_account">Sudah memiliki akun?</string>
    <string name="please_fill_in_your_email">Silahkan isi email anda!</string>
    <string name="please_use_a_valid_email">Silahkan gunakan email yang valid!</string>
    <string name="please_fill_in_your_password">Silahkan isi kata sandi anda!</string>
    <string name="please_enter_a_password_of_at_least_8_characters">Silahkan isi kata sandi minimal 8 karakter!</string>
    <string name="enter_the_email_used_on_your_account">Masukkan email yang digunakan pada akun Anda!</string>
    <string name="send">Kirim</string>
    <string name="please_fill_in_your_name">Silahkan isi nama anda!</string>
    <string name="please_enter_a_confirmation_password">Silahkan isi konfirmasi kata sandi!</string>
    <string name="please_enter_a_confirmation_password_of_at_least_8_characters">Silahkan isi konfirmasi kata sandi minimal 8 karakter</string>
    <string name="password_and_confirm_password_are_not_the_same">Kata sandi dan konfirmasi kata sandi tidak sama</string>
    <string name="please_fill_in_your_phone_number">Silahkan isi nomor telepon anda!</string>
    <string name="choose_an_option">Pilih salah satu opsi!</string>
    <string name="food">Makanan</string>
    <string name="history">Riwayat</string>
    <string name="ready_to_donate_food_today">Siap berdonasi makanan hari ini?</string>
    <string name="_2_731">2.731</string>
    <string name="recommendations_for_you">Rekomendasi untuk Anda</string>
    <string name="see_all">Lihat semua</string>
    <string name="lowokwaru">Lowokwaru</string>
    <string name="recent_article">Artikel Terbaru</string>
    <string name="donate">Donasi</string>
    <string name="forgot_password2">Lupa Password</string>
    <string name="add_product">Tambah Product</string>
    <string name="welcome">Selamat Datang</string>
    <string name="post_your_food">Posting makanan Anda</string>
    <string name="tell_us_more_about_your_food">Deskripsikan makanan Anda kepada kami!</string>
    <string name="product_name">Nama Produk</string>
    <string name="description">Deskripsi</string>
    <string name="expiration_date">Tanggal Kedaluwarsa</string>
    <string name="price">Harga</string>
    <string name="category">Kategori</string>
    <string name="donation">Donasi</string>
    <string name="location">Lokasi</string>
    <string name="post">Posting</string>
    <string name="re_upload_photo">Unggah ulang foto</string>
    <string name="please_fill_in_the_name_of_the_food">Silahkan isi nama produk!</string>
    <string name="please_press_the_location_logo_on_the_left">Silahkan tekan logo lokasi disebelah kiri!</string>
    <string name="please_fill_in_the_food_description">Silakan isi deskripsi produk!</string>
    <string name="please_fill_in_the_food_expiration_date">Silakan isi tanggal kadaluarsa produk!</string>
    <string name="please_fill_in_the_price_of_the_food">Silakan isi harga produk!</string>
    <string name="please_take_product_photos">Silakan ambil foto produk!</string>
    <string name="yesterday">Kemarin</string>
    <string name="fill_if_not_donate">* isi jika tidak berdonasi</string>
    <string name="apel_fuji_premium">Apel Fuji Premium</string>
    <string name="rp_0">Rp 0</string>
    <string name="expired_date">Tanggal kadaluarsa</string>
    <string name="order">Order</string>
    <string name="chat">Chat</string>
    <string name="sell">Jual</string>
    <string name="take">Ambil</string>
    <string name="this_is_your_food_post">* Ini adalah postingan makanan Anda</string>
    <string name="profile">Profil</string>
    <string name="name">Nama</string>
    <string name="test_mail_com">test@mail.com</string>
    <string name="logout">Logout</string>
    <string name="loading_users_failed">Gagal memuat pengguna</string>
    <string name="online">Online</string>
    <string name="search">Cari</string>
    <string name="all">Semua</string>
    <string name="payment_summary">Ringkasan Pembayaran</string>
    <string name="payment_method">Metode Pembayaran</string>
    <string name="shipping_cost">Biaya Pengiriman</string>
    <string name="total_payment">Total Pembayaran</string>
    <string name="cash">Cash</string>
    <string name="gopay">Gopay</string>
    <string name="dana">Dana</string>
    <string name="rp_1_000">Rp 1.000</string>
    <string name="_0">0</string>
    <string name="congratulations_the_food_has_been_successfully_posted">Selamat, makanan telah berhasil diposting</string>
    <string name="congratulations_the_account_has_been_successfully_registered">Selamat, akun telah berhasil didaftarkan</string>
    <string name="failed_to_get_user_data_please_try_again">Gagal mendapatkan data pengguna, coba lagi</string>
    <string name="savefood_coins">Koin SaveFood</string>
    <string name="order_successful_please_go_to_the_transaction_page_to_check_the_status">Pesanan berhasil, silakan masuk ke halaman transaksi untuk mengecek status</string>
    <string name="deactive">deactive</string>
    <string name="receiver">Penerima</string>
    <string name="sender">Pengirim</string>
    <string name="transaction_date">Tanggal Transaksi</string>
    <string name="transaction">Transaksi</string>
    <string name="delivery_details">Detail pengirimanan</string>
    <string name="order_details">Detail Order</string>
    <string name="done">Selesai</string>
    <string name="history_details">Detail Riwayat</string>
    <string name="cancel">Batalkan</string>
    <string name="payment_time">Waktu Pembayaran</string>
    <string name="seller">Penjual</string>
    <string name="open_maps">Buka Maps</string>
    <string name="please_install_gmaps_first">Silakan install Gmaps terlebih dahulu</string>
    <string name="gallery">Galeri</string>
    <string name="camera">Kamera</string>
    <string name="congratulations_the_transaction_has_been_successful">Selamat, transaksi telah berhasil</string>
    <string name="the_transaction_has_been_successfully_cancelled">Transaksi telah berhasil dibatalkan</string>
    <string name="there_are_no_transactions_yet">Belum ada transaksi</string>
    <string name="there_are_no_my_product_yet">Belum ada produk</string>
    <string name="there_are_no_products_yet">Belum ada produk</string>
    <string name="voucher">Voucher</string>
    <string name="the_voucher_feature_is_still_not_available">Maaf, fitur voucher masih belum tersedia</string>
    <string name="save_changes">Simpan perubahan</string>
    <string name="edit_profile">Edit profil</string>
    <string name="edit">Edit</string>
    <string name="sorry_the_edit_user_feature_is_still_not_available">Maaf, fitur edit pengguna masih belum tersedia</string>
    <string name="congratulations_the_profile_has_been_successfully_changed">Selamat, profil telah berhasil diubah</string>
    <string name="message_is_empty">Pesan masih kosong</string>
    <string name="my_product">Produk Saya</string>
    <string name="see_my_product">Produk Saya</string>
    <string name="delete">Hapus</string>
    <string name="success">Sukses</string>
    <string name="are_you_sure">Apa anda yakin?</string>
    <string name="are_you_sure_you_want_to_cancel_your_order">Apa anda yakin ingin membatalkan order?</string>
    <string name="keep">Teruskan</string>
    <string name="are_you_sure_to_delete_this_product">Apa anda yakin menghapus produk ini?</string>
    <string name="congratulations_your_product_has_been_successfully_deleted">Selamat produk anda berhasil dihapus</string>
    <string name="congratulations_the_food_information_has_been_updated_successfully">Selamat, informasi makanan berhasil diperbarui</string>
    <string name="gojek">Gojek</string>
    <string name="free_5x_go_ride">Free 5x GO RIDE</string>
    <string name="_2750">2750</string>
    <string name="free_1_ticket">Free 1 Ticket</string>
    <string name="_950">950</string>
    <string name="saldo_rp_30_000">Saldo Rp 30.000</string>
    <string name="_3300">3300</string>
    <string name="tix_id">TIX.ID</string>
    <string name="voucher_rp_50_000">Voucher Rp 50.000</string>
    <string name="_4650">4650</string>
    <string name="free_10x_go_ride">Free 10x GO RIDE</string>
    <string name="_5000">5000</string>
    <string name="free_2_ticket">Free 2 Ticket</string>
    <string name="_1800">1800</string>
    <string name="lihat_kebijakan_privasi_untuk_savefood">Lihat kebijakan privasi untuk Savefood</string>
    <string name="hapus_akun">Hapus Akun</string>
    <string name="apa_anda_yakin">Apa anda yakin?</string>
    <string name="apa_anda_yakin_ingin_mengahpus_akun">Apa anda yakin ingin mengahpus akun?</string>
    <string name="selamat_akun_anda_berhasil_dihapus">Selamat akun anda berhasil dihapus</string>
</resources>